k8s/plex/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: plex 
spec:
  replicas: 1
  serviceName: plex
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      name: plex
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:1.41.0
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/config"
          name: plex-config
        - mountPath: "/tv"
          name: shows
        - mountPath: "/movies"
          name: movies
        - mountPath: "/music"
          name: music
      nodeSelector:
        plex: "true"
      volumes:
        - name: plex-config
          iscsi:
            targetPortal: 10.10.11.5:3260
            iqn: iqn.2000-01.com.synology:Library.plex-config
            lun: 1
            fsType: ext4
            readOnly: false
        - name: movies
          nfs:
            server: library.faircloth.ca
            path: /volume1/Videos/Movies
        - name: shows
          nfs:
            server: library.faircloth.ca
            path: /volume1/Videos/Shows
        - name: music
          nfs:
            server: library.faircloth.ca
            path: /volume2/Music
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      tolerations:
      - key: "plex"
        value: "true"
        operator: "Equal"
        effect: "NoSchedule"
      - key: "plex"
        value: "true"
        operator: "Equal"
        effect: "NoExecute"
