k8s/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: plex-0
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
