k8s/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: plex.faircloth.ca
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          name: plex
          port: 32400
  - host: media.faircloth.ca
    http:
      paths:
      - path: /plex
        pathType: ImplementationSpecific
        backend:
          name: plex
          port: 32400
